--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         </a>
 
         <nav>
+            <div class="search-item">
+                <ion-icon name="search-outline"></ion-icon>
+            </div>
             <ul class="navmenu">
             <li class="navitem"><a href="#">All posts</a></li>
             <li class="navitem"><a href="#">Life Lessons</a></li>
             <li class="navitem"><a href="#">Journals</a></li>
             <li class="navitem">
-                <a href="#">Best Articles</a>
+                <a href="#">Best Articles  <ion-icon name="chevron-down-outline" class="navicon"></ion-icon></a>
                 <ul class="dropdown">
                     <li><a href="#">Best of 2023</a></li>
                     <li><a href="#">Best of 2022</a></li>
@@ -30,17 +33,22 @@
             </li>
             <li class="navitem"><a href="#">Register</a></li>
             <li class="navitem"><a href="#">Login</a></li>
-            <li class="navitem">
-                <a href="#">Hamada</a>
+            <!-- <li class="navitem">
+                <a href="#"> <ion-icon name="person-circle-outline" class="navicon"></ion-icon>
+                    Hamada 
+                    <ion-icon name="chevron-down-outline" class="navicon"></ion-icon></a>
               <ul class="dropdown">
                 <li><a href="#">Dashboard</a></li>
                 <li><a href="#">Logout</a></li>
               </ul>
-            </li>
+            </li> -->
         </ul>
         </nav>
 
     </header>
+    <!-- ===========  icons js  ======== -->
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
