--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
         <nav>
             <div class="search-item">
-                <ion-icon name="search-outline"></ion-icon>
+                <span class="search-icon" role="button">
+                    <ion-icon name="search-outline"></ion-icon>
+                </span>
+                <form action="index.html" method="post" class="header-search-form hide">
+                    <input type="text" name="search-term" placeholder="search this website..." class="input-control input-control-sn search-input">
+                </form>
             </div>
             <ul class="navmenu">
             <li class="navitem"><a href="#">All posts</a></li>
