--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     
     <header>
-        
+        <span role="button" class="menu-icon">
+            <ion-icon name="menu-outline"></ion-icon>
+        </span>
         <a href="" class="logo-wrapper td-none">
             <div><span>Info</span>BLOG</div>
         </a>
