--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         const menuIcon = document.querySelector('.menu-icon');
         const navOverlay = document.querySelector('.nav-overlay');
         const navMenu =document.querySelector('.navmenu');
+        const dropdowns = document.querySelectorAll('.navitem .dropdown');
 
         menuIcon.addEventListener('click', function(){
           navOverlay.classList.toggle('open');
@@ -88,6 +89,12 @@
         navOverlay.addEventListener('click', function(){
             navOverlay.classList.remove('open');
             navMenu.classList.remove('open');
+        });
+        dropdowns.forEach(dropdown =>{
+            const navItem = dropdown.closest('.navitem');
+            navItem.addEventListener('click', function(){
+                navItem.classList.toggle('active');
+            });
         });
         
     </script>
