--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -33,7 +33,63 @@
     </header>
 
     <div class="page-wrapper">
+       <div class="sidebar">
+        <ul class="list-menu">
+            <li>
+                <a href="#">
+                    <ion-icon name="speedometer-outline" class="menu-icon"></ion-icon>
+                    Dashboard
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="reader-outline" class="menu-icon"></ion-icon>
+                    Posts
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="grid-outline" class="menu-icon"></ion-icon>
+                    Topics
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="people-outline" class="menu-icon"></ion-icon>
+                    Users
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="lock-closed-outline" class="menu-icon"></ion-icon>
+                    Roles
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="key-outline" class="menu-icon"></ion-icon>
+                    Permissions
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <ion-icon name="reader-outline" class="menu-icon"></ion-icon>
+                    Collections
+                    <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
+                </a>
+            </li>
+        </ul>
+       </div>
 
+       <div class="page-content">
+        <h1 class="center">Admin Dashboard</h1>
+       </div>
     </div>
     <!-- ===========  icons js  ======== -->
 
