--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -35,8 +35,8 @@
     <div class="page-wrapper">   
        <div class="sidebar">
         <div class="sidebar-author-mobile">
-            <img src="" alt="">
-            <h3>Hamada djeroua</h3>
+            <img class="avatar" src="/assets/images/hmd.png" alt="">
+            <h3 class="author-name">Hamada djeroua</h3>
             <a href="/logout" class="logout-link">Logout</a>
         </div>
         <ul class="list-menu">
