--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/admin/post/index.html">
                     <ion-icon name="reader-outline" class="menu-icon"></ion-icon>
                     Posts
                     <ion-icon name="chevron-forward-outline" class="chevron-forward"></ion-icon>
